fixed figure img white space

--- a/styles.css
+++ b/styles.css
@@ -259,10 +259,18 @@ figure {
   padding: 0;
 }
 
+figcaption {
+  background-color: var(--mint);
+  opacity: 0.7;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
 figure img {
   width: 100%;
   height: 100%;
 }
+/* TODO fix gaps at bottom of figures */
 
 .span2 {
   grid-column: span 2;
